--- a/assets/sass/components/alert-box.scss
+++ b/assets/sass/components/alert-box.scss
@@ -1,6 +1,12 @@
+.alert-box-container {
+  display: flex;
+  justify-content: center;
+}
+
 .alert-box {
   position: relative;
   display: flex;
+  width: 100%;
   align-items: center;
   max-width: 500px;
   min-width: 250px;
@@ -39,6 +45,11 @@
 .warning-alert {
   background-color: #FFD48A;
   border-left: 5px solid #8A5700;
+}
+
+.alert-fade-in {
+  animation: fadeIn;
+  animation-duration: 300ms;
 }
 
 .alert-fade-out {
