--- a/templates/partials/trick.html.twig
+++ b/templates/partials/trick.html.twig
@@ -43,7 +43,7 @@
                 {% endif %}
             </div>
         </div>
-        {% include 'partials/comment_section.html.twig' %}
+        {% include 'partials/comment_section.html.twig' with {'hiddeLoadButton': false} %}
     </div>
 {% endblock %}
 
