--- a/templates/partials/navbar.html.twig
+++ b/templates/partials/navbar.html.twig
@@ -3,7 +3,12 @@
     <ul class="head-list">
         <li><a href="/home">Home</a></li>
         <li>Tricks</li>
-        <li><a href="/login">Log in</a></li>
-        <li><a href="/register">Register</a></li>
+
+        {% if app.user %}
+            <li><a href="/logout">Log out</a></li>
+        {% else %}
+            <li><a href="/login">Log in</a></li>
+            <li><a href="/register">Register</a></li>
+        {% endif %}
     </ul>
 </nav>
