--- a/assets/sass/layouts/header.scss
+++ b/assets/sass/layouts/header.scss
@@ -8,10 +8,14 @@
   font-family: Montserrat, serif;
 
   h1 {
-    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 20%;
+    translate: -20% -50%;
     align-items: center;
     flex-direction: column;
     font-size: 3em;
+    color: #FFF;
   }
 
   .split-title {
