--- a/assets/sass/layouts/forms.scss
+++ b/assets/sass/layouts/forms.scss
@@ -1,3 +1,4 @@
+
 .form-colors-custom {
   .form-control:focus {
     box-shadow: 0 0 0 0.25rem rgba($steel-blue, 0.6);
@@ -18,7 +19,7 @@
   grid-row-gap: 10px;
 
   .trick-description {
-    height: 200px!important;
+    height: 200px !important;
   }
 }
 
@@ -144,4 +145,58 @@
 }
 
 
+.profile-picture {
+  $circle-size: 165px;
+  $radius: 100px;
+  $shadow: 0 0 10px 0 rgba(255, 255, 255, .35);
+  $font-color: rgb(250, 250, 250);
+
+  color: transparent;
+  transition: all 300ms ease;
+  @include object-center;
+  position: relative;
+
+  input {
+    display: none;
+  }
+
+  img {
+    position: absolute;
+    object-fit: cover;
+    width: $circle-size;
+    height: $circle-size;
+    box-shadow: $shadow;
+    border-radius: $radius;
+    z-index: 0;
+  }
+
+  .label-img {
+    @include object-center;
+    cursor: pointer;
+    height: $circle-size;
+    width: $circle-size;
+    border-radius: $radius;
+    opacity: 0;
+    margin-bottom: 0;
+    background-color: rgba(0, 0, 0, .6);
+    z-index: 10000;
+    color: $font-color;
+    transition: opacity 300ms ease-in-out;
+  }
+
+
+  &:hover .label-img {
+    opacity: 1;
+  }
+
+  span{
+    display: inline-flex;
+    padding: .2em;
+    height: 2em;
+  }
+
+  i {
+    padding: .2em;
+  }
+}
 
