--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -13,7 +13,7 @@
             </div>
         {% endif %}
 
-        <h1 class="h3 my-3 font-weight-normal">Please Log in</h1>
+        <h1 class="m-title">Log in</h1>
         <div class="form-floating">
             <input type="text" value="{{ last_username }}" name="mail" id="inputMail" class="form-control"
                    autocomplete="username" placeholder="Mail" required autofocus>
