--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,4 +1,4 @@
-<header class="masthead" style="background-image: url({{ asset('build/images/wallpaperflare.com_wallpaper.jpg') }});">
+<header class="masthead" style="background-image: url({{ asset('build/images/snowboarding-wallpaper.jpg') }});">
     <h1 id="header-title">
         <span class="split-title">Dive</span>
         <span class="split-title">into the world</span>
