--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -13,7 +13,7 @@
     {% form_theme registrationForm 'form/form_errors.html.twig' %}
 
     {{ form_start(registrationForm, {'attr': {'class': 'basic-form form-colors-custom'}}) }}
-    <div class="profile-picture">
+    <div class="profile-picture" id="profile-picture-group">
         <label class="label-img" for="{{ registrationForm.profilePictureFile.vars.id }}">
             <i class="fa-solid fa-camera"></i>
             <span>Change Image</span>
@@ -22,7 +22,13 @@
         {{ form_errors(registrationForm.profilePictureFile) }}
         <img id="profile-picture" src="{{ asset('/build/images/user-avatar-filled.jpg') }}" alt="">
     </div>
-    <p>Click on the image to change your profile picture.</p>
+    <div class="profile-picture-actions">
+        <a role="button" id="delete-profile-picture">
+            <i class="fa-solid fa-trash-can fa-lg"></i>
+        </a>
+        <p>Click on the image to change your profile picture.</p>
+    </div>
+
     {% for registrationFormField in registrationForm %}
         {% if registrationFormField.vars.name not in ['_token','agreeTerms','profilePictureFile'] %}
             <div class="form-floating">
