--- a/assets/sass/layouts/forms.scss
+++ b/assets/sass/layouts/forms.scss
@@ -11,6 +11,20 @@
   }
 }
 
+.required-field::after {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  content: '*';
+  font-size: 20px;
+  color: #B0413E;
+}
+
+.required-checkbox {
+  font-size: 20px;
+  color: #B0413E;
+}
+
 
 .basic-form {
   display: grid;
@@ -218,6 +232,11 @@
 
   &-actions p {
     font-size: 0.9rem;
+    margin-bottom: 5px;
+  }
+
+  &-actions .form-error {
+    text-align: center;
   }
 
   &-actions i:hover {
