Add required-field css trick form

--- a/templates/partials/trick_form.html.twig
+++ b/templates/partials/trick_form.html.twig
@@ -86,15 +86,15 @@
             </div>
         </div>
         <h2 class="mt-20">Informations</h2>
-        <div class="form-floating">
+        <div class="form-floating required-field">
             {{ form_widget(trickForm.name) }}
             {{ form_label(trickForm.name) }}
         </div>
-        <div class="form-floating">
+        <div class="form-floating required-field">
             {{ form_widget(trickForm.description) }}
             {{ form_label(trickForm.description) }}
         </div>
-        <div class="form-floating">
+        <div class="form-floating required-field">
             {{ form_widget(trickForm.group_trick) }}
             {{ form_label(trickForm.group_trick) }}
         </div>
