--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Log in!{% endblock %}
 
+{% block navbar %}
+    {% include 'partials/navbar.html.twig' with {showDivider: false} %}
+{% endblock %}
+
 {% block header %}{% endblock %}
 
 {% block content %}
