--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -87,3 +87,19 @@ h2 {
 .m-title {
   margin: 30px 0;
 }
+
+.section-divider {
+  position: absolute;
+  width: 100%;
+  height: 50px;
+
+  &.divider-top {
+    top: 0;
+    left: 0;
+  }
+
+ &.divider-bot {
+   bottom: 0;
+   left: 0;
+ }
+}
