--- a/assets/sass/layouts/navbar.scss
+++ b/assets/sass/layouts/navbar.scss
@@ -1,15 +1,19 @@
 .head-nav {
+  position: relative;
   height: 10vh;
   display: flex;
   justify-content: space-between;
-  margin: 0 30px;
+  padding: 0 30px;
   font-family: Montserrat, serif;
+  background-color: #323639;
+  color: #FFF;
 }
 
 .head-list {
   display: flex;
   align-items: center;
   padding: 0;
+  margin-bottom: 0;
 
   li {
     height: 40%;
@@ -18,7 +22,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #333;
+    color: #FFF;
     transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
     text-align: center;
     padding: 0 10px;
@@ -63,7 +67,7 @@
   li:hover::after {
     width: 100%;
     height: 100%;
-    border-color: #333;
+    border-color: #FFF;
   }
 
   a {
@@ -72,7 +76,7 @@
   }
 
   a:visited {
-    color: #333
+    color: #FFF
   }
 }
 
