Replace default user avatar image

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -23,7 +23,7 @@
             <span>Change Image</span>
         </label>
         {{ form_widget(registrationForm.profilePictureFile) }}
-        <img id="profile-picture" src="{{ asset('/build/images/user-avatar-filled.jpg') }}" alt="">
+        <img id="profile-picture" src="{{ asset('/build/images/default-user-avatar.png') }}" alt="">
     </div>
     <div class="profile-picture-actions">
         <a role="button" id="delete-profile-picture">
