--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('styles') }}
-        {% endblock %}
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+    {% block stylesheets %}
+        {{ encore_entry_link_tags('styles') }}
+    {% endblock %}
 
-        {% block scripts_head %}{% endblock %}
-        <script src="https://kit.fontawesome.com/d3a0bd80a1.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <div id="page-container">
-            {% block navbar %}
-                {% include 'partials/navbar.html.twig' with {showDivider: true} %}
-            {% endblock %}
+    {% block scripts_head %}{% endblock %}
+    <script src="https://kit.fontawesome.com/d3a0bd80a1.js" crossorigin="anonymous"></script>
+</head>
+<body>
+<div id="page-container" class="page-container">
+    {% block navbar %}
+        {% include 'partials/navbar.html.twig' with {showDivider: true} %}
+    {% endblock %}
 
-            {% block header %}
-                {% include 'partials/header.html.twig' %}
-            {% endblock %}
-            {% block content %}{% endblock %}
-        </div>
-        {% block scripts_end_body %}{% endblock %}
-    </body>
+    {% block header %}
+        {% include 'partials/header.html.twig' %}
+    {% endblock %}
+    <div class="page-content">
+        {% block content %}{% endblock %}
+    </div>
+    {% include 'partials/footer.html.twig' %}
+</div>
+{% block scripts_end_body %}{% endblock %}
+</body>
 </html>
