Add navbar margin css class

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
 <body>
 <div id="page-container" class="page-container">
     {% block navbar %}
-        {% include 'partials/navbar.html.twig' with {showDivider: true} %}
+        {% include 'partials/navbar.html.twig' with {showDivider: true, navMargin: ''} %}
     {% endblock %}
 
     {% block header %}
