--- a/templates/partials/trick_form.html.twig
+++ b/templates/partials/trick_form.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block navbar %}
-    {% include 'partials/navbar.html.twig' with {showDivider: false} %}
+    {% include 'partials/navbar.html.twig' with {showDivider: false, navMargin: 'navbar-margin'} %}
 {% endblock %}
 
 {% block header %}{% endblock %}
