--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Log in!{% endblock %}
 
 {% block navbar %}
-    {% include 'partials/navbar.html.twig' with {showDivider: false} %}
+    {% include 'partials/navbar.html.twig' with {showDivider: false, navMargin: 'navbar-margin'} %}
 {% endblock %}
 
 {% block header %}{% endblock %}
