--- a/templates/partials/navbar.html.twig
+++ b/templates/partials/navbar.html.twig
@@ -1,4 +1,4 @@
-<nav class="head-nav">
+<nav class="head-nav {{ navMargin }}">
     <img src="{{ asset('build/images/white-Snowtricks-logo.png') }}" alt="Snowtricks logo">
     {% if app.user %}
     <div class="menu-navbar">
@@ -22,5 +22,8 @@
     {% if showDivider %}
         <img src="{{ asset('/build/images/bot-section-divider.png') }}" alt="section divider bottom"
              class="section-divider divider-bot">
+    {% else %}
+        <img src="{{ asset('/build/images/wave-divider.png') }}" alt="header divider"
+             class="header-divider">
     {% endif %}
 </nav>
