--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -4,7 +4,9 @@
     <div class="social-networks">
         <i class="fa-brands fa-twitter"></i>
         <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-github"></i>
+        <a href="https://github.com/Nerym492/SnowTricks" target="_blank">
+            <i class="fa-brands fa-github"></i>
+        </a>
     </div>
     <p>2023 © Snowtricks. All rights reserved.</p>
 </footer>
