Move trick templates into templates/trick folder

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-        {% include 'partials/tricks_list.html.twig' with {'hiddeLoadButton': false} %}
+        {% include 'trick/tricks_list.html.twig' with {'hiddeLoadButton': false} %}
 {% endblock %}
 
 {% block scripts_end_body %}
