--- a/templates/trick/trick_form.html.twig
+++ b/templates/trick/trick_form.html.twig
@@ -11,7 +11,7 @@
 
 {% block content %}
     <div class="trick-container">
-        {% include 'partials/header_trick.html.twig' %}
+        {% include 'trick/header_trick.html.twig' %}
 
         {{ form_start(trickForm, {'attr': {'class': 'basic-form form-color-custom', 'id': 'trick_form'}}) }}
         <h2>Images</h2>
