--- a/templates/trick/trick.html.twig
+++ b/templates/trick/trick.html.twig
@@ -13,7 +13,7 @@
 
 {% block content %}
     <div class="trick-container">
-        {% include 'partials/header_trick.html.twig' %}
+        {% include 'trick/header_trick.html.twig' %}
         {% if trickImages is not empty %}
             <h2>Images</h2>
             <div class="medias-container">
