Move comment templates into templates/comment folder

--- a/templates/comment/comment_section.html.twig
+++ b/templates/comment/comment_section.html.twig
@@ -19,5 +19,5 @@
                                        class="link">Create one here.</a>
         </p>
     {% endif %}
-    {% include 'partials/comments_list.html.twig' %}
+    {% include 'comment/comments_list.html.twig' %}
 </section>
