--- a/assets/sass/layouts/trick-details.scss
+++ b/assets/sass/layouts/trick-details.scss
@@ -105,6 +105,14 @@
 .comment {
   display: flex;
   margin-bottom: 20px;
+  align-items: center;
+
+  img {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    margin-right: 15px;
+  }
 
   &:nth-child(1) {
     margin-top: 20px;
