Change social networks link css

--- a/assets/sass/layouts/footer.scss
+++ b/assets/sass/layouts/footer.scss
@@ -20,6 +20,9 @@ footer {
 
   .social-networks a {
     color: #FFF;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
   }
 
   i {
