Add link on Tricks navbar menu

--- a/templates/partials/navbar.html.twig
+++ b/templates/partials/navbar.html.twig
@@ -5,7 +5,7 @@
         {% endif %}
         <ul class="head-list">
             <li><a href="/home">Home</a></li>
-            <li>Tricks</li>
+            <li><a href="#trick-list">Tricks</a></li>
 
             {% if app.user %}
                 <li><a href="/logout">Log out</a></li>
