--- a/assets/sass/layouts/header.scss
+++ b/assets/sass/layouts/header.scss
@@ -24,6 +24,19 @@
     text-align: center;
     text-transform: uppercase;
   }
+
+  @media (max-width: $medium-screens) {
+    h1 {
+      left: 50%;
+      translate: -50% -50%;
+    }
+  }
+
+  @media (max-width: $small-screens) {
+    h1 {
+      font-size: 2.2em;
+    }
+  }
 }
 
 @keyframes fade-in {
