--- a/assets/sass/layouts/trick-details.scss
+++ b/assets/sass/layouts/trick-details.scss
@@ -1,8 +1,12 @@
 .trick-container {
-  width: 1136px;
+  max-width: 1136px;
   margin: 0 auto;
   border-radius: 10px;
   overflow: hidden;
+
+  @media (max-width: 1193px) {
+    margin: 0 20px;
+  }
 }
 
 .medias-container {
