--- a/assets/sass/layouts/footer.scss
+++ b/assets/sass/layouts/footer.scss
@@ -1,5 +1,6 @@
 $divider-height: 50px;
-$mobile-divider-height: 20px;
+$medium-divider-height: 20px;
+$small-divider-height: 15px;
 
 footer {
   position: relative;
@@ -47,13 +48,24 @@ footer {
   height: $divider-height;
 }
 
-@media (max-width: 736px) {
+@media (max-width: $medium-screens) {
   footer {
-    margin-top: 40px + $mobile-divider-height;
+    margin-top: 40px + $medium-divider-height;
   }
 
   .footer-divider {
-    top: (-1 * $mobile-divider-height) + 1;
-    height: $mobile-divider-height;
+    top: (-1 * $medium-divider-height) + 1;
+    height: $medium-divider-height;
+  }
+}
+
+@media (max-width: $small-screens) {
+  footer {
+    margin-top: 40px + $small-divider-height;
+  }
+
+  .footer-divider {
+    top: (-1 * $small-divider-height) + 1;
+    height: $small-divider-height;
   }
 }
