--- a/assets/sass/layouts/forms.scss
+++ b/assets/sass/layouts/forms.scss
@@ -54,7 +54,7 @@
 
 .comment-form {
   display: grid;
-  grid-template-columns: 500px;
+  grid-template-columns: minmax(280px, 600px);
   justify-content: center;
   row-gap: 10px;
 
