--- a/assets/sass/layouts/header.scss
+++ b/assets/sass/layouts/header.scss
@@ -64,9 +64,15 @@
   left: 0;
   transform: rotate(180deg);
 
-  @media (max-width: 736px) {
-    $mobile-height: 20px;
-    height: $mobile-height;
-    bottom: -1 * ($mobile-height - 2px);
+  @media (max-width: $medium-screens) {
+    $medium-height: 20px;
+    height: $medium-height;
+    bottom: -1 * ($medium-height - 2px);
+  }
+
+  @media (max-width: $small-screens) {
+    $small-height: 10px;
+    height: $small-height;
+    bottom: -1 * ($small-height - 2px);
   }
 }
