--- a/assets/sass/layouts/trick-details.scss
+++ b/assets/sass/layouts/trick-details.scss
@@ -7,6 +7,11 @@
   @media (max-width: 1193px) {
     margin: 0 20px;
   }
+
+  @media (max-width: $small-screens) {
+    padding: 0;
+    margin: 0 10px;
+  }
 }
 
 .medias-container {
@@ -67,6 +72,11 @@
     text-align: center;
     margin-bottom: 40px;
   }
+
+  @media (max-width: $small-screens) {
+    padding: 0;
+
+  }
 }
 
 .trick-informations {
@@ -79,10 +89,23 @@
     background: #AAA;
     padding: 5px;
     border-radius: 5px;
+    width: fit-content;
   }
 
   &-item:last-child {
     margin-right: 0;
+  }
+
+  @media (max-width: $small-screens) {
+    flex-direction: column;
+    margin-right: 0;
+    margin-top: 0;
+    align-items: center;
+
+    .trick-informations-item {
+      margin-top: 20px;
+      margin-right: 0;
+    }
   }
 }
 
@@ -98,7 +121,7 @@
 .comment-list {
   display: grid;
   justify-content: center;
-  grid-template-columns: 500px;
+  grid-template-columns: minmax(300px, 600px);
   border-top: 1px solid #bdbdbd;
 }
 
