--- a/assets/sass/layouts/header.scss
+++ b/assets/sass/layouts/header.scss
@@ -25,14 +25,14 @@
     text-transform: uppercase;
   }
 
-  @media (max-width: $medium-screens) {
+  @media (max-width: $medium-screens-width) {
     h1 {
       left: 50%;
       translate: -50% -50%;
     }
   }
 
-  @media (max-width: $small-screens) {
+  @media (max-width: $small-screens-width) {
     h1 {
       font-size: 2.2em;
     }
@@ -64,13 +64,13 @@
   left: 0;
   transform: rotate(180deg);
 
-  @media (max-width: $medium-screens) {
+  @media (max-width: $medium-screens-width) {
     $medium-height: 20px;
     height: $medium-height;
     bottom: -1 * ($medium-height - 2px);
   }
 
-  @media (max-width: $small-screens) {
+  @media (max-width: $small-screens-width) {
     $small-height: 10px;
     height: $small-height;
     bottom: -1 * ($small-height - 2px);
