Add unique constraint on User pseudo and Trick name

--- a/assets/sass/components/alert-box.scss
+++ b/assets/sass/components/alert-box.scss
@@ -20,6 +20,12 @@
   }
 }
 
+.trick-form-informations + .alert-box-container {
+  .alert-box {
+    margin-top: 0;
+  }
+}
+
 @media (max-width: 550px) {
   .alert-box {
     margin-right: 0.5rem;
