Fix image loading problem after changing the trick name

--- a/templates/trick/header_trick.html.twig
+++ b/templates/trick/header_trick.html.twig
@@ -3,8 +3,8 @@
     {% if headerImage is not empty %}
         <img src="{{ path(
             'get_trick_image',
-            {'trickName': trick.name,'imageName': headerImage.fileName}
-        ) }}" alt="image {{ trick.name }}" id="image-header-details">
+            {'trickName': trickName,'imageName': headerImage.fileName}
+        ) }}" alt="image {{ trickName }}" id="image-header-details">
     {% else %}
         <img src="/build/images/image-placeholder.webp" alt="Image placeholder" id="image-header-details">
     {% endif %}
