--- a/templates/trick/trick.html.twig
+++ b/templates/trick/trick.html.twig
@@ -47,7 +47,7 @@
                 {% endif %}
             </div>
         </div>
-        {% include 'comment/comment_section.html.twig' with {'hiddeLoadButton': false} %}
+        {% include 'comment/comment_section.html.twig' %}
     </div>
 {% endblock %}
 
